# BNStats

./: .env.example  .gitattributes  .gitignore  .tokeignore  README.md  aerich.ini  cron.py  logcfg.json  populate.py  pyproject.toml  run.py
bnstats/: __init__.py  app.py  config.py  helper.py  models.py  plugins.py  routine.py  score.py
bnstats/bnsite/: enums.py  request.py
bnstats/middlewares/: calculator.py  maintenance.py
bnstats/models/: __init__.py  fields.py  tables.py
bnstats/routes/: home.py  qat.py  score.py  users.py
bnstats/routine/: __init__.py  constants.py  fetchers.py  workers.py
bnstats/score/: __init__.py  base.py  naxess.py  object.py  ren.py
bnstats/static/: bundle.5d72c2bf.js  bundle.b2a0b881.js  bundle.e5de98d6.css  style.css
bnstats/static/css/: style.css
bnstats/static/js/: filter.js  global.js  leaderboard.js  profile.js  table-preact.js  table.js
bnstats/templates/: base.html  macros.html
bnstats/templates/includes/: list-filters.html  score-warning.html  user-header.html  user-info.html  user-labels.html
bnstats/templates/pages/: index.html
bnstats/templates/pages/score/: leaderboard.html  show.html
bnstats/templates/pages/user/: listing.html  no_noms.html  score_show.html  show.html
bnstats/templates/score/: listing.html  show.html
migrations/models/: 0_20201016161723_init.json  0_20211016145122_init.sql  1_20201017071507_update.json  1_20211016145622_update.sql  2_20201019151641_Add topdiff column.json  2_20211016145788_fixtortoise.sql  3_20201031095944_Add_score.json  3_20230102161307_add_index.sql  4_20201031185429_add_specific_mode_info.json  5_20201101143524_add_resets.json  6_20201101151727_add_penalty.json  7_20201102090326_add_creator_id.json  8_20201202140802_support_multiple_mode_nomination.json  9_20201231203949_support_switch.json
patches/: fix_reset_order.py
tests/: conftest.py  test_aiess.py  test_bnstats.py  test_helper.py  test_init.py  test_middleware.py  test_models.py  test_routes.py  test_scoring.py
tests/data/: beatmaps.json  nominations.json  resets.json  sample_user.json
tests/data/aiess/: error.json  first.json
tests/data/api/: 1209473.json
