[tool.poetry]
name = "bnstats"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
uvicorn = "^0.12.1"
aiofiles = "^0.5.0"
itsdangerous = "^1.1.0"
jinja2 = "^2.11.2"
httpx = "^0.16.1"
python-dateutil = "^2.8.1"
tortoise-orm = "^0.16.16"
aiosqlite = "^0.15.0"
asyncpg = "^0.21.0"
aerich = "^0.3.2"
webassets = "^2.0"
rcssmin = "^1.0.6"
rjsmin = "^1.1.0"
gunicorn = {version = "^20.0.4", platform = "linux"}
uvloop = {version = "^0.14.0", platform = "linux"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
mypy = "^0.790"
asynctest = "^0.13.0"
pytest-asyncio = "^0.14.0"
beautifulsoup4 = "^4.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
